[package]
name = "port-scanner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "time", "macros"] }
futures = "0.3"
structopt = "0.3"
lazy_static = "1.4"
trust-dns-proto = "0.20"
rand = "0.8"
