[package]
name = "port-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "time", "macros"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
trust-dns-client = "0.22"
rand = "0.8"

[target.'cfg(target_family = "unix")'.dependencies]
tokio-rustls = { version = "0.23", features = ["dangerous_configuration"] }
x509-parser = "0.14"
